<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.appoinment.create.CreateAppointmentActivity">

    <TextView
        android:id="@+id/title_create_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/create_appointment_title"
        />

    <TextView
        android:id="@+id/create_appointment_label_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/title_create_appointment"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_appointment_date_label"
        />

    <EditText
        android:id="@+id/create_appointment_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:inputType="date"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/create_appointment_label_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/create_appointment_label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/create_appointment_date"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_appointment_type_label"
        />

    <Spinner
        android:id="@+id/create_appointment_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/create_appointment_label_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@android:color/darker_gray"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/create_appointment_pet_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/create_appointment_type"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_appointment_pet_label"
        />

    <EditText
        android:id="@+id/create_appointment_pet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:inputType="text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/create_appointment_pet_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/create_appointment_description_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/create_appointment_pet"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_appointment_description_label"
        />

    <EditText
        android:id="@+id/create_appointment_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:inputType="text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/create_appointment_description_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/create_appointment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:text="@string/create_appointment_button_text"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>