<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            android:id="@+id/appointment_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Appointment Title"/>

        <TextView
            android:id="@+id/appointment_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appointment_title"
            tools:text="18/02/2024"
            />

        <TextView
            android:id="@+id/appointment_pet_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appointment_date"
            android:text="@string/appt_patient_label"
            />

        <TextView
            android:id="@+id/appointment_pet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/appointment_pet_label"
            app:layout_constraintTop_toTopOf="@id/appointment_pet_label"
            app:layout_constraintBottom_toBottomOf="@id/appointment_pet_label"
            tools:text="Timmy"
            />

        <TextView
            android:id="@+id/appointment_pet_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/appointment_pet"
            app:layout_constraintTop_toTopOf="@id/appointment_pet_label"
            app:layout_constraintBottom_toBottomOf="@id/appointment_pet_label"
            tools:text="(Cat)"
            />

        <TextView
            android:id="@+id/appointment_type_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appointment_pet"
            android:text="@string/appt_type_label"
            />

        <TextView
            android:id="@+id/appointment_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/appointment_type_label"
            app:layout_constraintTop_toTopOf="@id/appointment_type_label"
            app:layout_constraintBottom_toBottomOf="@id/appointment_type_label"
            tools:text="General"
            />

        <TextView
            android:id="@+id/appointment_status_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appointment_type"
            android:text="@string/appt_status_label"
            />

        <TextView
            android:id="@+id/appointment_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/appointment_status_label"
            app:layout_constraintTop_toTopOf="@id/appointment_status_label"
            app:layout_constraintBottom_toBottomOf="@id/appointment_status_label"
            tools:text="Approved"
            />


        <TextView
            android:id="@+id/appointment_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/appointment_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="General"
            />

        <Button
            android:id="@+id/appointment_button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/appointment_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/appointment_button_edit"
            app:layout_constraintVertical_chainStyle="spread"
            android:text="@string/appt_cancel_button_text"
            />


        <Button
            android:id="@+id/appointment_button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/appointment_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/appointment_button_delete"
            android:text="@string/appt_edit_button_text"
            />

        <TextView
            android:id="@+id/appointment_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appointment_button_delete"
            tools:text="$ 12"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>